<resources>
    <string name="app_name">MyLab03</string>
    <string name="mainPicture">TODO</string>
    <string name="nameInstruction">Input your Name</string>
    <string name="city">City</string>
    <string name="flores">Flores</string>
    <string name="semuc">Semuc</string>
    <string name="Title" />
    <string name="PhaseView" />
    <string name="Description" />
    <string name="comment">Input comment</string>
    <string name="commentInstr">Comment</string>
</resources>
